<resources>
    <string name="app_name">IrmaWear</string>
    <string name="app_name_enroll">IrmaWear Enrollment</string>
    <string name="hello_world">Hello World!</string>
    <string name="irmaWearVersion">IrmaWear 0.44.45</string> <!--format: 0.WEEKNUMBER.BUILD-->
    <string name="menu_settings">Settings</string>
    <string name="menu_reset">Load demo card</string>
    <string name="irmalogo">IRMA logo</string>
    <string name="credential_info">IRMA app</string>
    <string name="feedback_waiting_for_card">Waiting for card</string>
    <string name="feedback_waiting_for_passport">Waiting for Document</string>
    <string name="feedback_communicating_passport">Communicating with Passport…</string>
    <string name="pinhint">PIN</string>
    <string name="pinmessage">Please enter your IRMA pincode</string>
    <string name="connectserver">Connecting to server</string>

    <string name="title_credential_detail">Credential Detail</string>
    <string name="title_log">Log</string>

    <string name="status_idle">Tap to scan QR</string>
    <string name="status_connecting">Connecting…</string>
    <string name="status_connected">Connected to server</string>
    <string name="status_ready">Ready</string>
    <string name="status_communicating">Communicating…</string>
    <string name="status_waitingforpin">Waiting for PIN</string>
    <string name="menu_enroll">Enroll</string>
    <string name="enroll_expl">You are about to start receiving new (base) IRMA credentials. If you already have a set of credentials, then this step might overwrite some of those.
    During this process your document will be read remotely and the contents will be compared to the subscription information known for this phone.
    If the document data matches the subscription data, a set of base credentials will be issued to your IRMA app.</string>
    <string name="se_welcome">IRMA self enrollment</string>
    <string name="se_connect_mno"><![CDATA[
    This process consists of the following three steps: <br/><br/>
    &nbsp;&nbsp;1.&nbsp;&nbsp;Entering some data from your document; <br/>
    &nbsp;&nbsp;2.&nbsp;&nbsp;Reading data from your document; <br/>
    &nbsp;&nbsp;3.&nbsp;&nbsp;Issuing the credential. <br/><br/>
    During the final process, your name, date and place of birth will be transmitted to the enrollment server, but these will not be stored by the server.
    <br/><br/>
    Proceed?
    ]]></string>
    <string name="se_continue">Continue</string> <!-- calling this string "continue" is not allowed -->
    <string name="back">Back</string>
    <string name="abort">Abort</string>
    <string name="retry">Retry</string>
    <string name="se_connected_mno">Connected to server</string>
    <string name="se_connecting_mno">Connecting to server…</string>
    <string name="se_passport_verified">Passport data matched to subscriber data. \n Continue to MijnOverheid.nl to receive credentials.</string>
    <string name="se_connected_mijnoverheid">Connected to server</string>
    <string name="feedback_issueing">Issuing credentials…</string>
    <string name="done">Done.</string>
    <string name="clear_card">Clear card</string>
    <string name="enroll_url_menu_item">Set enroll server</string>
    <string name="enroll_url_dialog_hint">Enroll server URL</string>
    <string name="enroll_url_dialog_title">Enter the enrollment server URL</string>
    <string name="default_string">Default</string>
    <string name="step_string">Step</string>
    <string name="enroll_default_url">demo.irmacard.org</string>
    <string name="enroll_error_label">Self enrollment failed</string>
    <string name="error_nfc_notsupported">This phone does not support NFC.</string>
    <string name="error_nfc_disabled">NFC is disabled. Please enable NFC in the phone settings before using this
        feature.</string>
    <string name="error_enroll_issuing_failed">The issuing of the credential failed.</string>
    <string name="error_enroll_cantconnect">Could not connect to the enrollment server.</string>
    <string name="error_enroll_serverdied">The server encountered a problem and aborted.</string>
    <string name="error_enroll_invalidresponse">The enrollment server returned an invalid response.</string>
    <string name="error_enroll_passporterror">Failed to establish contact with the passport.</string>
    <string name="error_enroll_edlerror">Failed to establish contact with the driving license.</string>
    <string name="error_enroll_bacfailed">The document data you supplied seems to be wrong.</string>
    <string name="error_enroll_passportrejected">Could not establish passport validity.</string>
    <string name="error_enroll_passport_expired">You cannot enroll with an expired identity document.</string>
    <string name="unknown_error">The following error occurred: %1$s</string>
    <string name="enroll_enter_bac_title">Document data</string>
    <string name="enroll_enter_bac_desc">Please select the identity document you wish to use, and provide the requested data to allow the app to communicate with the document.</string>
    <string name="menu_show_log">Show log</string>
    <string name="check_for_updates">Check for updates</string>
    <string name="no_new_updates">No updates found.</string>
    <string name="update_server_error">Could not connect to the update server.</string>
    <string name="no_credentials">You don\'t have any credentials yet.</string>
    <string name="enroll">Document Enroll</string>
    <string name="online_enroll">Demo Enroll</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="more_info">More Info</string>

    <plurals name="disclose_question_1">
        <item quantity="one">The following attribute will be sent to the verifier.</item>
        <item quantity="other">The following attributes will be sent to the verifier.</item>
    </plurals>
    <string name="disclose_question_2">Are you sure you want to disclose these attributes?</string>
    <string name="or">or enter</string>
    <string name="feedback_communicating_driverslicense">Communicating with drivers license</string>
    <string name="error_enroll_driverslicense_error">Failed to establish contact with drivers license</string>
    <string name="preferences">Preferences</string>
    <string name="delete_scheme_manager">Delete scheme manager</string>
    <string name="scheme_managers">Scheme Managers</string>
    <string name="scheme_managers_summary">View, add or remove scheme managers</string>
    <string name="add_new">Add new</string>
    <string name="add_new_scheme_manager">Add new scheme manager</string>
    <string name="enter_scheme_manager_url">Enter the URL of the scheme manager</string>
    <string-array name="document_list">
        <item>Passport / ID card</item>
        <item>Drivers License</item>
    </string-array>
    <string name="title_activity_scheme_manager_detail">Scheme Manager Details</string>

    <string name="action_settings">Settings</string>
    <string name="name">Name:</string>
    <string name="url">URL:</string>
    <string name="description">Description:</string>
    <string name="contact">Contact:</string>
    <string name="diclosure_information">Disclosure Information</string>
    <string name="title_activity_review_credentials">ReviewCredentials</string>
    <string name="hello_round">Hello Round World!</string>
    <string name="hello_square">Hello Square World!</string>
    <string name="title_activity_enroll">EnrollActivity</string>
    <string name="title_activity_disclose">DiscloseActivity</string>
    <string name="title_activity_wifi">WifiActivity</string>
</resources>
