<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent">

    <include layout="@layout/irma_background_issue" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="40dp"
        android:paddingBottom="0dp">

        <TextView
            android:id="@+id/se_feedback_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/se_connect_mno"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/irmadarkblue"
            android:textSize="12sp"
            android:textIsSelectable="true"
            android:layout_marginTop="25dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_above="@+id/se_button_continue" />



        <TextView
            android:id="@+id/status_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/se_welcome"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/irmadarkblue"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <Button
            style="@style/Irma.Button"
            android:id="@+id/se_button_continue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/se_continue"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />


    </RelativeLayout>

</RelativeLayout>

